--- a/lib/burrito/web/templates/page/index.html.eex
+++ b/lib/burrito/web/templates/page/index.html.eex
@@ -1,7 +1,7 @@
 <div class="jumbotron">
   <h2><%= gettext "Welcome to %{name}!", name: "Phoenix" %></h2>
   <p class="lead">A productive web framework that<br />does not compromise speed and maintainability.</p>
-  <p>Deploy tart</p>
+  <p>Deploy fart</p>
 </div>
 
 <div class="row marketing">
